--- a/kured_brain.yaml
+++ b/kured_brain.yaml
@@ -7,18 +7,11 @@ metadata:
 #  resourceVersion: "809965"
 #  uid: d9d1ca5b-eb34-11e7-887b-42010a8002b8
 data:
-  nodes: "tralala1"
-
-  
-  state1.nodes: "1,2,3,4"
-  state1.value: "maintenance"
-  state1.period: "always"
-  state1.scheduled: "no"
-  state1.timeFrame: "0:00 - 07:00 CEST"
-
   state2: |-
-    nodes=kind-worker2,kind-control-plane
+    nodes=kind-worker2,kind-worker
     value=reboot
     period=once
     scheduled=no
     timeFrame=""
+  
+  state1: 
