feature: tolerating both reboot and maintenance
 now kured allows both, scheduling reboot and
 maintenance on nodes (following the rolling
 update principle).
 rebootAsRequired is being duplicated with
 maintainAsRequired and are wrapped by
 serveNode function.

--- a/kured-brain.yaml
+++ b/kured-brain.yaml
@@ -9,9 +9,9 @@ metadata:
 data:
   state2: |-
     nodes=""
-    value=reboot
+    value=""
     period=once
     scheduled=no
     timeFrame=""
-  
+
   nodeInProcess: ""
